feat: complete hexagonal architecture implementation for FFL Playoffs API
- Implement comprehensive domain models (Game, Player, TeamSelection, Week, Score)
- Add status enums (GameStatus, PlayerStatus, WeekStatus) for state management
- Create complete use case implementations (CreateGame, InvitePlayer, SelectTeam, CalculateScores)
- Build full application service layer with DTO conversions
- Refactor DTOs to use standard Java getters/setters (removed Lombok dependency)
- Implement domain events (GameCreatedEvent, TeamEliminatedEvent)
- Add complete repository and adapter implementations
- Enhance README with comprehensive architecture and API documentation
- Update build.gradle with latest dependency versions
- Add BDD test structure with Cucumber feature files
- Configure project with proper .gitignore

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>